2010-08-30  Francois Chouinard  <fchouinard@gmail.com>

	* src/org/eclipse/linuxtools/tmf/ui/parsers/custom/CustomEventsTable.java (createColumnHeaders): Added dummy param to create array of correct type (ColumnData)
	* src/org/eclipse/linuxtools/tmf/ui/widgets/TmfVirtualTable.java: Fix for the calculation of the number of rows

2010-07-28  Francois Chouinard  <fchouinard@gmail.com>

	* src/org/eclipse/linuxtools/tmf/ui/widgets/ColumnData.java: New file.
	* src/org/eclipse/linuxtools/tmf/ui/widgets/TmfVirtualTable.java: New file.
	* META-INF/MANIFEST.MF: Export org.eclipse.linuxtools.tmf.ui.widgets
	* src/org/eclipse/linuxtools/tmf/ui/editors/TmfEditorInput.java: Missing @Override
	* src/org/eclipse/linuxtools/tmf/ui/parsers/custom/CustomEventsTable.java: Missing @Override 
	* src/org/eclipse/linuxtools/tmf/ui/parsers/custom/CustomTxtTraceDefinition.java: Missing @Override 
	* src/org/eclipse/linuxtools/tmf/ui/parsers/custom/CustomXmlTraceDefinition.java: Missing @Override 
	* src/org/eclipse/linuxtools/tmf/ui/viewers/events/TmfEventsTable.java: Replace Table by TmfVirtualTable
	* src/org/eclipse/linuxtools/tmf/ui/views/project/handlers/CloseProjectHandler.java: Missing @Override
	* src/org/eclipse/linuxtools/tmf/ui/views/project/handlers/DeleteExperimentHandler.java: Missing @Override 
	* src/org/eclipse/linuxtools/tmf/ui/views/project/handlers/DeleteProjectHandler.java : Missing @Override
	* src/org/eclipse/linuxtools/tmf/ui/views/project/handlers/DeleteTraceHandler.java: Missing @Override
	* src/org/eclipse/linuxtools/tmf/ui/views/project/handlers/ImportTraceHandler.java: Missing @Override
	* src/org/eclipse/linuxtools/tmf/ui/views/project/handlers/NewExperimentHandler.java: Missing @Override 
	* src/org/eclipse/linuxtools/tmf/ui/views/project/handlers/NewProjectHandler.java: Missing @Override
	* src/org/eclipse/linuxtools/tmf/ui/views/project/handlers/OpenExperimentHandler.java: Missing @Override